Update dialog title, message and checkbox expressive themes
Expressive:
https://hsv.googleplex.com/6375673542213632
https://hsv.googleplex.com/6229503054446592
https://hsv.googleplex.com/5603726587854848
https://hsv.googleplex.com/6238021115445248
https://hsv.googleplex.com/6032993939357696
https://hsv.googleplex.com/6096788229455872

Legacy:
https://hsv.googleplex.com/6450906135527424
https://hsv.googleplex.com/5470043985936384
https://hsv.googleplex.com/6719683821568000
https://hsv.googleplex.com/5571728276193280
https://hsv.googleplex.com/4787290483195904
https://hsv.googleplex.com/5732512725729280

Bug: 390205844
Test: visual
Flag: NONE covered by expressive theme
Change-Id: I7933d7c64fe325da162b0e7d5f974c5b0dbddbd4

--- a/apk/res/values/overlayable.xml
+++ b/apk/res/values/overlayable.xml
@@ -108,6 +108,8 @@
             <item type="style" name="TextAppearance.HealthConnect.Subheader"/>
             <item type="style" name="TextAppearance.HealthConnect.Subheader2"/>
             <item type="style" name="TextAppearance.HealthConnect.Subheader3"/>
+            <item type="style" name="TextAppearance.HealthConnect.Subheader4"/>
+            <item type="style" name="TextAppearance.HealthConnect.Subheader5"/>
             <item type="style" name="TextAppearance.HealthConnect.RouteRequest"/>
             <item type="style" name="TextAppearance.HealthConnect.CategoryTitle"/>
             <item type="style" name="TextAppearance.HealthConnect.ErrorMessage"/>
