Update Allow this exercise route dialog buttons expressive style
Expressive: https://hsv.googleplex.com/5197090023014400
Legacy: https://hsv.googleplex.com/5080792442077184

Test: visual
Bug: 378469481
Flag: NONE covered by expressive
Change-Id: Ic37ae42c5a05f9acad7a76c794b857f6beca0e69

--- a/apk/res/values/styles_expressive.xml
+++ b/apk/res/values/styles_expressive.xml
@@ -39,4 +39,18 @@
         <item name="android:textSize">14sp</item>
         <item name="android:lineHeight">20sp</item>
     </style>
+
+    <style name="PermissionGrantButton.Expressive.Outline" parent="@style/SettingsLibButtonStyle.Expressive.Outline">
+        <item name="android:paddingVertical">@dimen/spacing_xxsmall</item>
+        <item name="android:layout_marginVertical">@dimen/spacing_xxsmall</item>
+        <item name="android:layout_marginHorizontal">@dimen/spacing_large</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="PermissionGrantButton.Expressive.Full" parent="@style/SettingsLibButtonStyle.Expressive.Filled">
+        <item name="android:paddingVertical">@dimen/spacing_xxsmall</item>
+        <item name="android:layout_marginVertical">@dimen/spacing_xxsmall</item>
+        <item name="android:layout_marginHorizontal">@dimen/spacing_large</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
 </resources>
