--- a/apk/res/values/styles_expressive.xml
+++ b/apk/res/values/styles_expressive.xml
@@ -53,4 +53,24 @@
         <item name="android:layout_marginHorizontal">@dimen/spacing_large</item>
         <item name="android:layout_width">match_parent</item>
     </style>
+
+    <style name="TextAppearance.HealthConnect.Expressive.RouteRequestWarning" parent="@style/TextAppearance.PreferenceTitle.SettingsLib">
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:lineHeight">16sp</item>
+    </style>
+
+    <style name="TextAppearance.HealthConnect.Expressive.PreferenceTitle" parent="@style/TextAppearance.PreferenceTitle.SettingsLib">
+        <item name="android:textFontWeight">500</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineHeight">24sp</item>
+        <item name="android:textColor">@color/settingslib_materialColorOnSurface</item>
+    </style>
+
+    <style name="TextAppearance.HealthConnect.Expressive.PreferenceSummary" parent="@style/TextAppearance.PreferenceTitle.SettingsLib">
+        <item name="android:textFontWeight">400</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineHeight">20sp</item>
+        <item name="android:textColor">@color/settingslib_materialColorOnSurfaceVariant</item>
+    </style>
 </resources>
