Reduce padding between RadioButtons and update textappearance
Expressive before: https://hsv.googleplex.com/6223691829477376
Expressive after: https://hsv.googleplex.com/4573078049783808
Legacy remained unchanged

Fix: 403209258
Test: visual
Flag: NONE covered by expressive
Change-Id: I41d56a43c9116791fd5000d2000ba34e234f1323

--- a/apk/res/layout/dialog_exercise_routes_permission_expressive.xml
+++ b/apk/res/layout/dialog_exercise_routes_permission_expressive.xml
@@ -55,34 +55,31 @@
                 android:id="@+id/radio_button_always_allow"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="?android:attr/listPreferredItemHeight"
+                android:minHeight="@dimen/button_size"
                 android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                 android:paddingEnd="0dp"
                 android:text="@string/route_permissions_always_allow"
-                android:textAppearance="?attr/textAppearanceSummary"
-                android:textColor="?android:attr/textColorPrimary" />
+                android:textAppearance="?attr/textAppearanceExpressiveRadioButton"  />
 
             <RadioButton
                 android:id="@+id/radio_button_ask"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="?android:attr/listPreferredItemHeight"
+                android:minHeight="@dimen/button_size"
                 android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                 android:paddingEnd="0dp"
                 android:text="@string/route_permissions_ask"
-                android:textAppearance="?attr/textAppearanceSummary"
-                android:textColor="?android:attr/textColorPrimary" />
+                android:textAppearance="?attr/textAppearanceExpressiveRadioButton"  />
 
             <RadioButton
                 android:id="@+id/radio_button_revoke"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:minHeight="?android:attr/listPreferredItemHeight"
+                android:minHeight="@dimen/button_size"
                 android:paddingStart="?android:attr/listPreferredItemPaddingStart"
                 android:paddingEnd="0dp"
                 android:text="@string/route_permissions_deny"
-                android:textAppearance="?attr/textAppearanceSummary"
-                android:textColor="?android:attr/textColorPrimary" />
+                android:textAppearance="?attr/textAppearanceExpressiveRadioButton" />
 
         </RadioGroup>
     </LinearLayout>
