--- a/apk/res/values/attrs.xml
+++ b/apk/res/values/attrs.xml
@@ -144,6 +144,7 @@
     <attr name="textAppearanceSubheader3" format="reference"/>
     <attr name="textAppearanceExpressiveDialogTitle" format="reference"/>
     <attr name="textAppearanceExpressiveDialogMessage" format="reference"/>
+    <attr name="textAppearanceExpressiveRadioButton" format="reference"/>
     <attr name="textAppearanceRouteRequest" format="reference"/>
     <attr name="textAppearancePreferenceCategory" format="reference"/>
     <attr name="textAppearanceErrorMessage" format="reference"/>
